minorChanges(refactor)done

--- a/src/app/components/slot-single/slot-single.component.scss
+++ b/src/app/components/slot-single/slot-single.component.scss
@@ -43,11 +43,11 @@
       }
   
       .slot-title {
-        color: #fff;
+        color: #ffff;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        padding: 9px 12ppx;
+        padding: 9px 12px;
         font-size: 14px;
       }
   
