--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-navbar></app-navbar>
 <div class="main-wrapper">
-  <img ngSrc="/assets/images/cover.png" alt="category preview" priority width="1585" height="420">
+  <img ngSrc="/assets/images/main.png" alt="main photo" priority width="1585" height="420">
   <div class="filter-wrapper">
     <app-filter-slots></app-filter-slots>
     <app-providers></app-providers>
